# Changelog
# $Id$
nn-nn-14 - Version 5.1.30

  - Fix for Bug#71621 (18228302), MysqlXAConnection#xidToString(Xid xid) produces too much garbage.
    Thanks to Andrej Golovnin for his contribution.

  - Fix for Bug#67318 (16722637), SQLException thrown on already closed ResultSet. Thanks to Thomas Manville and Andrej Golovnin for their contribution.

  - Fix for Bug#71396 (18110320), setMaxRows (SQL_SELECT_LIMIT) from one query used in later queries (sometimes).
    Additionally, SQL_SELECT_LIMIT is no longer sent unnecessarily between consecutive queries.

  - Fix for Bug#71432 (18107621), Key store files not closed when making SSL connection

  - Reserved words lists updated from latest official SQL:92 and SQL:2003 specifications.

  - Fix for Bug#18091639, STRINGINDEXOUTOFBOUNDSEXCEPTION IN PREPAREDSTATEMENT.SETTIMESTAMP WITH 5.6.15

02-10-14 - Version 5.1.29

  - Fix for Bug#70701 (17647584), DatabaseMetaData.getSQLKeywords() doesn't match MySQL 5.6 reserved words.

  - Fix for Bug#17435879, REMOVE SRC/LIB-NODIST DIRECTORY FROM LAUNCHPAD DISTRIBUTION.
    Additional "com.mysql.jdbc.extra.libs" parameter must be used for ant build.

  - Fix for Bug#71038, Add an option for custom collations detection.
    Added new connection property detectCustomCollations=[true|false], with default false.
    Please be aware that these changed the previous default behavior and if you use custom charsets or collations
    you need to set detectCustomCollations=true.

  - Added tests for new index renaming syntax introduced in 5.7.1.

12-23-13 - Version 5.1.28

  - Fix for Bug#69579, DriverManager.setLoginTimeout not honored.

  - Fix for Bug#51313, Escape processing is confused by multiple backslashes.

  - Fix for Bug#55340, initializeResultsMetadataFromCache fails on second call to stored proc.

  - Fix for Bug#70969, Shadow declaration of OperationNotSupportedException in RowDataDynamic.
